# fx-wrapper

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.woodpecker/: linux.yaml  windows.yaml
cmake/: minhook.cmake  subhook.cmake
scripts/: Dockerfile.musl  analyze-lua-regs.py  build-linux-musl.sh  build-windows-amd64.ps1  ci-package-windows.ps1  ci-upload-release.ps1  find-execute-strings.py  find-node-perm-linux.py  scan-lua-tables.py  sync-sandbox-test-resource.ps1  sync-sandbox-test-resource.sh  test-both-platforms.ps1  test-child-hook-propagate.sh  test-linux-server.sh  test-lua-table.c  test-win-server.ps1  verify-hook-targets.py
src/: injector.cpp  injector.h  main.cpp  process_launcher.cpp  process_launcher.h
src/hook/: binary_module.cpp  binary_module.h  citizen_lua_api.cpp  citizen_lua_api.h  dllmain.cpp  fx_log.cpp  fx_log.h  hook_entry.cpp  hook_util.cpp  hook_util.h  hook_util_linux.cpp  hook_util_win.cpp  hooks.cpp  hooks.h  lua_os_patch.cpp  lua_os_patch.h  module_watcher.cpp  module_watcher.h  node_hooks.cpp  node_hooks.h  update_check.cpp  update_check.h
src/platform/: hook_engine_linux.cpp  hook_engine_win.cpp  linux_fxserver_launch.cpp  linux_fxserver_launch.h  linux_thread.cpp  linux_thread.h  platform.h  platform_linux.cpp  platform_win.cpp
test-resources/: test-server.cfg
test-resources/fx-sandbox-test/: fxmanifest.lua  main.js  main.lua  spawn_helper.js
tools/: analyze_lua.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.vue  style.css
web/src/components/: ContentDisclaimer.vue  DownloadSection.vue  HowItWorksSection.vue  IntroSection.vue
web/src/composables/: useFileDownload.js  useHashNav.js  useUpdateInfo.js
